# test-health-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
assessments/: cardio_risk_v1.yaml
src/hea/: __main__.py  settings.py
src/hea/assessment/: loader.py
src/hea/bot/: formatting.py  handlers.py  rate_limiter.py
src/hea/llm/: client.py  exceptions.py  prompt_builder.py
src/hea/models/: assessment.py  llm.py  session.py
src/hea/orchestrator/: engine.py  validator.py
src/hea/report/: text_report.py
src/hea/storage/: migrations.py  repository.py
tests/: test_formatting.py  test_llm_client.py  test_loader.py  test_models.py  test_orchestrator.py  test_orchestrator_errors.py  test_prompt_builder.py  test_rate_limiter.py  test_repository_context.py  test_scoring_config.py  test_settings_path.py  test_storage.py  test_text_report.py  test_validator.py
