[project]
name = "hea"
version = "0.1.0"
description = "Health Assessment Engine - Telegram bot for micro health assessments"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15,<4",
    "httpx>=0.28,<1",
    "aiosqlite>=0.21,<1",
    "pyyaml>=6.0,<7",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6.0,<7",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["hea"]
omit = ["src/hea/__main__.py", "src/hea/bot/*"]
